# jupyformat

./: .gitignore  README.md  pyproject.toml
tests/: test_pyformat.py
